# fleet-management-system

./: Dockerfile.rn1  Dockerfile.rn2  README.md  docker-compose.yml  mosquitto.conf
app/: app.py  requirements.txt
ros2_ws/: Dockerfile  requirements.txt
ros2_ws/src/rn1_action_client/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/rn1_action_client/rn1_action_client/: rn1_node.py
ros2_ws/src/rn2_action_server/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/rn2_action_server/rn2_action_server/: rn2_node.py
