<?xml version="1.0"?>
<package format="3">
  <name>rn2_action_server</name>
  <version>0.1.0</version>
  <description>ROS2 Action Server that receives and prints missions.</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>rclcpp_action</depend>
  <depend>example_interfaces</depend>
  <depend>action_msgs</depend>
  <depend>python3-setuptools</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
